<resources>
    <string name="app_name">TravelApp</string>
    <string name="login_with"><font color="#656F77">Login with</font> </string>
    <string name="forget_password"><font color="#656F77">Forget password</font></string>
    <string name="create_acc"><font color="#656F77">You don\'t have account?</font> </string>
    <string name="facebook_app_id">507083160975898</string>
    <string name="fb_login_protocol_scheme">fb507083160975898</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_more">See more</string>
    <string name="new_york">new york</string>
    <string name="inTheWorld">In the world</string>
    <string name="admin_home">Admin\'s Home</string>
    <string name="list_posts">List posts</string>
    <string name="search_by_name">Search by name</string>
    <string name="explore_trips_and_enjoy_life">Explore trips and enjoy life</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="admin_name">Admin</string>
    <string name="change_this_profile">Change this profile</string>
    <string name="search">Search</string>
    <string name="password_admin">admin123</string>
    <string name="admin_email">admin123@gmail.com</string>
    <string name="value_null">null</string>
    <string name="categories_title">Categories</string>
    <string name="recommended">Recommended</string>
    <string name="know_your_world">Know your world</string>
    <string name="favorites">Favorites</string>
    <string name="tourist_destination_name">Tourist destination name</string>
    <string name="address_for_tourist_place">Address for tourist place</string>
    <string name="latitude_of_location">Latitude of location</string>
    <string name="longitude_of_place">Longitude of place</string>
    <string name="about">About</string>
    <string name="type">Type</string>
    <string name="enter_content">Enter content</string>
    <string name="vote">Vote</string>
    <string name="chat_with_admin">Chat with Admin</string>
    <string name="lorem_default">lorem default</string>
    <string name="time_6pm">6PM</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="recover_password">Recover password</string>
    <string name="change_password">Change password</string>
    <string name="enter_username">Enter username</string>
    <string name="change_phone">Change Phone</string>
    <string name="enter_phone">Enter phone</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="create_account">Create account</string>
    <string name="enter_email">Enter email</string>
    <string name="change_address">Change Address</string>
    <string name="enter_address">Enter Address</string>

</resources>