<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.userfragment.ProfileFragmentUser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtAdminTittleProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/nunito"
            android:padding="10dp"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearmainAdmin"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="16dp"
            android:background=" #E9EFF3"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/txtAdminTittleProfile">

            <ImageView
                android:id="@+id/avatar_profile_fragment_admin"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/useravatar"
                android:background="@drawable/custom_image_avatar_fragment" />

            <LinearLayout
                android:id="@+id/lnchagneprfAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvchangethisprfAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppinsregular"
                    android:lineSpacingExtra="0dp"
                    android:text="@string/change_this_profile"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCurrentUserNameInUserProfileScreenAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppinsblack"
                    android:text="@string/admin_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearuserAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="16dp"
            android:background="#E9EFF3"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linearmainAdmin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nunito"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtUserNameInUserProfileScreenAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_edtext_inprofile_user"
                android:text="@string/admin_name"
                android:textSize="20sp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/linearpasswordAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:background=" #E9EFF3"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/linearuserAdmin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nunito"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtUserPasswordInUserProfileAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                android:background="@drawable/custom_edtext_inprofile_user"
                android:importantForAutofill="no"
                android:text="@string/password_admin"
                android:textSize="20sp"
                tools:ignore="TextViewEdits" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearaddressAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:background=" #E9EFF3"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/linearpasswordAdmin">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nunito"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtAddressInUserProfileAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/custom_edtext_inprofile_user"
                android:layout_marginTop="5dp"
                android:text="@string/value_null"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearphoneAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:background=" #E9EFF3"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/linearaddressAdmin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nunito"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPhoneInUserProfileAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_edtext_inprofile_user"
                android:text="@string/value_null"
                android:textSize="20sp"
                tools:ignore="TextViewEdits" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/linearEmailAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:background=" #E9EFF3"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/linearphoneAdmin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nunito"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtUserEmailInUserProfileScreenAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_edtext_inprofile_user"
                android:text="@string/admin_email"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:background=" #FFFFFF"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/linearEmailAdmin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>