<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:padding="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/titletv"
            android:text="@string/change_address"
            android:gravity="center"
            android:textStyle="normal"
            android:textColor="#FF80AB"
            android:fontFamily="@font/nunito"
            android:textSize="26sp"
            android:padding="12dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edtchangeaddress"
            app:layout_constraintTop_toBottomOf="@id/titletv"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/enter_address"
            android:background="@drawable/custom_login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnConfirmAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.4"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/custom_btn_create"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginBottom="40dp"
            app:layout_constraintTop_toBottomOf="@id/edtchangeaddress"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
            android:id="@+id/btnCancelChangeAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.4"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/custom_btn_create"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginBottom="40dp"
            app:layout_constraintTop_toBottomOf="@id/edtchangeaddress"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>