<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.admin.AdminAddPostFragment">

 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:orientation="vertical"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
     >

     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/imgTourist1InEditPost"
             android:background="@drawable/custom_image_tourist_first"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="match_parent"
             android:layout_height="220dp"/>
         <ImageView
             android:id="@+id/iconCamera"
             app:layout_constraintTop_toTopOf="@id/imgTourist1InEditPost"
             app:layout_constraintBottom_toBottomOf="@id/imgTourist1InEditPost"
             app:layout_constraintLeft_toLeftOf="@id/imgTourist1InEditPost"
             app:layout_constraintRight_toRightOf="@id/imgTourist1InEditPost"
             android:src="@drawable/ic_baseline_photo_camera_24"
             android:layout_width="50dp"
             android:layout_height="50dp"/>
         <ImageView
             android:id="@+id/img_tourist_2"
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:background="@drawable/custom_image_tourists_after"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/imgTourist1InEditPost"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintWidth_percent="0.2"/>

         <ImageView
             android:id="@+id/img_tourist_3"
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/custom_image_tourists_after"
             app:layout_constraintTop_toBottomOf="@id/imgTourist1InEditPost"
             app:layout_constraintLeft_toRightOf="@id/img_tourist_2"
             app:layout_constraintWidth_percent="0.2"/>

         <ImageView
             android:id="@+id/img_tourist_4"
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/custom_image_tourists_after"
             app:layout_constraintTop_toBottomOf="@id/imgTourist1InEditPost"
             app:layout_constraintLeft_toRightOf="@id/img_tourist_3"
             app:layout_constraintWidth_percent="0.2"/>

         <ImageView
             android:id="@+id/img_tourist_5"
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="25dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/custom_image_tourists_after"
             app:layout_constraintTop_toBottomOf="@id/imgTourist1InEditPost"
             app:layout_constraintLeft_toRightOf="@id/img_tourist_4"
             app:layout_constraintWidth_percent="0.2"/>

         <EditText
             android:id="@+id/edt_touristDestinationName_addNewPost"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginStart="25dp"
             android:layout_alignParentTop="true"
             android:layout_marginTop="30dp"
             android:textSize="24sp"
             android:fontFamily="@font/merriweatherbold"
             android:textColor="@color/black"
             android:hint="@string/tourist_destination_name"
             android:background="@color/background"
             app:layout_constraintTop_toBottomOf="@id/img_tourist_2"
             app:layout_constraintStart_toStartOf="parent"
             />
         <ImageView
             android:id="@+id/iconLocation"
             android:src="@drawable/iconlocation"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edt_touristDestinationName_addNewPost"
             android:layout_marginTop="30dp"
             android:layout_marginStart="25dp"
             android:layout_width="18dp"
             android:layout_height="18dp"/>
         <EditText
             android:id="@+id/edtTouristPlaceNewPost"
             android:layout_width="wrap_content"
             android:layout_height="21dp"
             android:layout_marginStart="20dp"
             android:layout_alignParentTop="true"
             android:textSize="14sp"
             android:fontFamily="@font/poppinsregular"
             android:background="@color/background"
             android:hint="@string/address_for_tourist_place"
             android:layout_marginTop="30dp"
             app:layout_constraintStart_toEndOf="@id/iconLocation"
             app:layout_constraintTop_toBottomOf="@id/edt_touristDestinationName_addNewPost"
             />
         <EditText
             android:id="@+id/edtLatitude_AddNewPost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:layout_alignParentTop="true"
             android:textSize="14sp"
             android:fontFamily="@font/poppinsregular"
             android:background="@color/background"
             android:hint="@string/latitude_of_location"
             android:layout_marginTop="30dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edtTouristPlaceNewPost"
             />
         <EditText
             android:id="@+id/edtLongitude_AddNewPost"
             android:layout_width="wrap_content"
             android:layout_height="21dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="25dp"
             android:layout_alignParentTop="true"
             android:textSize="14sp"
             android:fontFamily="@font/poppinsregular"
             android:background="@color/background"
             android:hint="@string/longitude_of_place"
             android:layout_marginTop="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edtTouristPlaceNewPost"
             />
         <TextView
             android:id="@+id/tvAbout"
             android:text="@string/about"
             android:textSize="20sp"
             android:layout_marginTop="40dp"
             android:layout_marginStart="25dp"
             app:layout_constraintTop_toBottomOf="@id/edtLatitude_AddNewPost"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>

         <EditText
             android:id="@+id/edtType"
             android:hint="@string/type"
             android:textSize="20sp"
             android:layout_marginTop="30dp"
             android:background="@color/background"
             android:layout_marginEnd="25dp"
             android:textColor="@color/black"
             app:layout_constraintTop_toBottomOf="@id/edtLatitude_AddNewPost"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <EditText
             android:id="@+id/edtContent_newAdd"
             android:textSize="20sp"
             android:layout_marginTop="20dp"
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp"
             android:hint="@string/enter_content"
             android:background="@color/background"
             app:layout_constraintTop_toBottomOf="@id/tvAbout"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <Button
             android:id="@+id/btnSaveNewPost"
             app:layout_constraintTop_toBottomOf="@id/edtContent_newAdd"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:text="@string/save"
             android:textSize="20sp"
             android:textAllCaps="false"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/custom_btn_create"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>